сортировка теперь выполняется по имени, поиск теперь может искать по имени и фамилии одновременно, рефакторинг кода, добавлена мемоизация иконок, добавлены новые эффекты при наведении и удерживание ЛКМ, исправлен перевод

--- a/kode-intership-2025-react/src/assets/locales/en/en.json
+++ b/kode-intership-2025-react/src/assets/locales/en/en.json
@@ -9,7 +9,7 @@
   "criticalErrorText": "We'll try to fix it quickly",
   "criticalErrorReload": "Try again",
   "sorting": "Sorting",
-  "alphabetically": "Alphabetically",
+  "alphabetically": "By alphabet",
   "by_birthday": "By birthday",
   "age": "{{count}} y.o."
 }
